cfg/camunda-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: camunda
spec:
  selector:
      matchLabels:
        app: camunda
  replicas: 1
  template:
    metadata:
      labels:
        app: camunda
    spec:
      containers:
        - name: camunda
          image: camunda/camunda-bpm-platform:latest
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 8080
