cfg/flowable-idm-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flowable-idm
spec:
  selector:
      matchLabels:
        app: flowable-idm
  replicas: 1
  template:
    metadata:
      labels:
        app: flowable-idm
    spec:
      containers:
        - name: flowable-idm
          image: flowable/flowable-idm:latest
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 8080
