cfg/camunda-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: camunda
spec:
  selector:
    app: camunda
  ports:
  - protocol: TCP
    port: 8080
  type: NodePort
