cfg/flowable-all-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: flowable-all
spec:
  selector:
    app: flowable-all
  ports:
  - protocol: TCP
    port: 8080
  type: NodePort
