cfg/flowable-idm-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: flowable-idm
spec:
  selector:
    app: flowable-idm
  ports:
  - protocol: TCP
    port: 8080
  type: NodePort
