cfg/dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: dashboard.knowprocess.com
    http:
      paths:
      - backend:
          serviceName: dashboard
          servicePort: 443
